--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "types": "dist/index.d.ts",
   "module": "dist/index.esm.js",
   "scripts": {
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "build": "tsc && sass src:dist --no-source-map",
+    "storybook": "sb dev -p 6006",
+    "build-storybook": "sb build",
+    "build": "tsc && vite build",
+    "dev": "vite",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -26,17 +28,20 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@storybook/react": "^7.6.0",
-    "@storybook/react-webpack5": "^7.6.0",
     "@storybook/addon-essentials": "^7.6.0",
     "@storybook/addon-interactions": "^7.6.0",
     "@storybook/addon-links": "^7.6.0",
     "@storybook/blocks": "^7.6.0",
+    "@storybook/cli": "^7.6.0",
+    "@storybook/react": "^7.6.0",
+    "@storybook/react-vite": "^7.6.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "sass": "^1.69.0",
     "typescript": "^5.3.0",
-    "sass": "^1.69.0"
+    "vite": "^5.0.0"
   }
 }
