--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.69.0",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
   }
