--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-library",
   "version": "0.1.0",
   "description": "A React component library for web and mobile",
-  "main": "dist/index.js",
+  "main": "dist/react-library.js",
   "types": "dist/index.d.ts",
-  "module": "dist/index.esm.js",
+  "module": "dist/react-library.mjs",
   "scripts": {
     "storybook": "sb dev -p 6006",
     "build-storybook": "sb build",
@@ -45,6 +45,7 @@
     "sass": "^1.69.0",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
